<resources>
    <string name="app_name">ProjetoAMSI</string>
    <string name="str_treino" />
    <string name="str_comecar_treino">Começar a treinar</string>
    <string name="str_plano_nutricional">Plano nutricional</string>
    <string name="str_avaliacoes">Avaliações</string>
    <string name="str_salas_exercicio">Salas de exercício</string>
    <string name="str_mensagens">Mensagens</string>
    <string name="PolarName">Polar Fitness Solutions</string>
    <string name="ouString">ou</string>
    <string name="RegistarString">Registar</string>
    <string name="LoginString" />
    <string name="LoginStr">Login</string>
    <string name="RegistarContaString">Registar Conta</string>
    <string name="generoString" />
    <string name="GeneroStr">Género</string>
</resources>